[package]
name = "jsonpp5"
version = "0.1.0"
authors = ["Yiran Sheng <shengyiran@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
pretty = "0.5.2"
structopt = "0.2.13"
json5 = { git = "https://github.com/callum-oakley/json5-rs" }

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]
